<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2E7D5"
    android:orientation="vertical"
    tools:context=".AboutFragment">


    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="monospace"
        android:background="@color/green"
        android:padding="2dp"
        android:text="@string/aboutGameTitle"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutUsTitle"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:background="@color/green"
        android:padding="2dp"
        android:text="@string/aboutUsTitle"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutGameText" />

    <TextView
        android:id="@+id/contactTitle"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:background="@color/green"
        android:padding="2dp"
        android:text="@string/contactTitle"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUsText" />

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:background="@color/light_yellow"
        android:fontFamily="monospace"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:text="@string/aboutUsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUsTitle" />

    <TextView
        android:id="@+id/contactText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/light_yellow"
        android:fontFamily="monospace"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:text="@string/contactText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactTitle" />

    <TextView
        android:id="@+id/aboutGameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/light_yellow"
        android:fontFamily="monospace"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:text="@string/aboutGameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>